--- a/features/main/pubspec.yaml
+++ b/features/main/pubspec.yaml
@@ -17,12 +17,19 @@ dependencies:
   json_annotation: ^4.9.0
   google_fonts: ^6.2.1
   flutter_colorpicker: ^1.1.0
+  tutorial_coach_mark: ^1.2.11
 
   common:
     path: ../common
 
   schedule:
     path: ../schedule
+
+  sharing:
+    path: ../sharing
+
+  onboarding:
+    path: ../onboarding
 
 dev_dependencies:
   flutter_test:
