--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,20 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>L'appareil photo est utilisé pour scanner les QR codes de partage</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>CFBundleURLName</key>
+			<string>com.dansmonsac.share</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>dansmonsac</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
