--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+3
+version: 1.0.2+8
 
 environment:
   sdk: ^3.6.1
@@ -47,13 +47,14 @@ dependencies:
   shared_preferences: ^2.3.3
   flutter_colorpicker: ^1.1.0
   timezone: ^0.9.4
+  tutorial_coach_mark: ^1.2.11
 
   # Offline-first database
-  drift: ^2.14.0
+  drift: ^2.28.2
   sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.1.0
   path: ^1.8.3
-  connectivity_plus: ^5.0.0
+  connectivity_plus: ^6.0.0
   uuid: ^4.0.0
 
   ##### MODULES DEPENCIES #######
@@ -72,6 +73,12 @@ dependencies:
   schedule:
     path: features/schedule
 
+  sharing:
+    path: features/sharing
+
+  # Deep linking
+  app_links: ^6.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -79,7 +86,7 @@ dev_dependencies:
   # the code generator
   riverpod_generator: ^2.6.2
   json_serializable: ^6.8.0
-  drift_dev: ^2.14.0
+  drift_dev: ^2.28.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
